完善权限控制功能