@@ -1,9 +1,10 @@
 package com.framework.backend.config;
 
-import com.framework.backend.entity.User;
+import com.framework.backend.model.entity.User;
+import com.framework.backend.service.AuthorizationService;
 import com.framework.backend.service.UserService;
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -14,12 +15,13 @@ import org.springframework.stereotype.Component;
 
 /**
  * @author fucong
- * @description To do
+ * @description 自定义UserDetailsService 用于查询用户信息
  * @since 2025/6/26 13:45
  */
 @Component
 public class MyUserDetailsService implements UserDetailsService {
   @Autowired private UserService userService;
+  @Autowired private AuthorizationService authorizationService;
 
   @Override
   public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
@@ -27,13 +29,20 @@ public class MyUserDetailsService implements UserDetailsService {
     if (user == null) {
       return null;
     }
+    Collection<GrantedAuthority> grantedAuthorities = new ArrayList<>();
+    // 1.设置用户的角色权限
     if (!user.getRoleCodes().isEmpty()) {
-      Collection<GrantedAuthority> grantedAuthorities =
+      grantedAuthorities.addAll(
           user.getRoleCodes().stream()
               .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-              .collect(Collectors.toList());
-      user.setAuthorities(grantedAuthorities);
+              .toList());
     }
+    // 2.设置用户所有的资源权限
+    if (!user.getPermissions().isEmpty()) {
+      grantedAuthorities.addAll(
+          user.getPermissions().stream().map(SimpleGrantedAuthority::new).toList());
+    }
+    user.setAuthorities(grantedAuthorities);
     return user;
   }
 }
